<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.LoginScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center|top"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/loginScreenMovieIcon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/app_icon"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/loginScreenAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="28dp" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_bottom_detail"
            android:orientation="vertical"
            android:padding="20dp"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/loginScreenWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="28dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_italic"
                android:text="@string/login_wia_email"
                android:layout_marginTop="40dp"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:elevation="5dp"
                android:hint="@string/email"
                app:boxStrokeColor="@color/orange"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_round_account_box_24"
                app:startIconTint="@color/green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                app:boxStrokeColor="@color/orange"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_round_password_24"
                app:startIconTint="@color/green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:elevation="5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/login"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="20dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>